# mie-occ-wasm

./: CMakeLists.txt  CMakePresets.json  LICENCE  README.md  package-lock.json  package.json  setup.ts  tsconfig.json
.github/workflows/: release.yml
src/: async_task.hpp  cad2mesh.cpp  cad_import.cpp  common.cpp  common.hpp  model_context.cpp  model_context.hpp  model_triangulation_impl.cpp  model_triangulation_impl.hpp
